
ngIRCd 0.6.x-CVS

  - Fixed KILL: you can't crash the server by killing yourself any more,
    ngIRCd no longer sends a QUIT to other servers after the KILL, and you
    can kill only valid users now.
  - The server no longer forwards commands to ordinary users, instead it
    answers with the correct error message ("no such server") now.
  - WHOIS commands weren't always forwarded as requested.


Older changes (sorry, only available in german language):

ngIRCd 0.6.0, 2002-12-24

  ngIRCd 0.6.0-pre2, 2002-12-23
  - neuer Numeric 005 ("Features") beim Connect.
  - LUSERS erweitert: nun wird die maximale Anzahl der lokalen und globalen
    Clients, die dem Server bzw. im Netzwerk seit dem letzten (Re-)Start
    dem Server gleichzeitig bekannt waren, angezeigt.

  ngIRCd 0.6.0-pre1, 2002-12-18
  - beim Schliessen einer Verbindung zeigt der Server nun vor dem ERROR
    noch eine Statistik ueber die empfangene und gesendete Datenmenge an.
  - der Server wartet bei einer eingehenden Verbindung nun laenger auf den
    Resolver (4 Sekunden), wenn das Ergebnis eintrifft setzt er aber den
    Login sofort fort (bisher wurde immer mind. 1 Sekunde gewartet).
  - Connection-Strukturen werden nun "pool-weise" verwaltet; der Pool wird
    bei Bedarf bis zu einem konfigurierten Limit vergroessert.
  - Mit der neuen Konfigurationsvariable "MaxConnections" (Sektion "Global")
    kann die maximale Anzahl gleichzeitiger Verbindungen begrenzt werden.
    Der Default ist -1, "unlimitiert".
  - der Server erkennt nun, ob bereits eine eingehende Verbindung von einem
    Peer-Server besteht und versucht dann nicht mehr, selber eine eigene
    ausgehende Verbindung zu diesem auufzubauen. Dadurch kann nun auf beiden
    Servern in der Konfiguration ein Port fuer den Connect konfiguriert
    werden (beide Server versuchen sich dann gegenseitig zu connectieren).
  - Test-Suite und Dokumentation an A/UX angepasst.
  - unter HP-UX definiert das configure-Script nun _XOPEN_SOURCE_EXTENDED.