@@ -18,6 +18,8 @@ ngIRCd 0.6.x-CVS
   - The server no longer forwards commands to ordinary users, instead it
     answers with the correct error message ("no such server") now.
   - WHOIS commands weren't always forwarded as requested.
+  - The server sets a correct default AWAY message now when propagating
+    between servers.
 
 
 Older changes (sorry, only available in german language):
@@ -381,4 +383,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.147.2.6 2003/01/01 13:46:06 alex Exp $
+$Id: ChangeLog,v 1.147.2.7 2003/01/02 18:03:05 alex Exp $
